# git-worktree-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json
.claude/: settings.json
.github/workflows/: ci.yml
completions/: SETUP.md  _gwt  gwt-completions.zsh
docs/: GITHUB_AUTH_SETUP.md
src/: bash-functionality.sh  bitbucket_api.rs  bitbucket_auth.rs  bitbucket_data_center_api.rs  bitbucket_data_center_auth.rs  cli.rs  completions.rs  config.rs  git-worktree-add.ts  git-worktree-completion.ts  git-worktree-init.ts  git-worktree-list.ts  git-worktree-remove.ts  git-worktree-switch.ts  git-worktree-utils.ts  git.rs  github.rs  hooks.rs  main.rs  shell_integration.rs  simple-test.ts  test-worktrees.ts  test.ts  utils.rs
src/commands/: add.rs  auth.rs  init.rs  list.rs  list_helpers.rs  mod.rs  remove.rs  switch.rs
tests/: integration_tests.rs  test_utils.rs
typescript-version/: biome.json  package.json  pnpm-lock.yaml
typescript-version/src/: bash-functionality.sh  git-worktree-add.ts  git-worktree-completion.ts  git-worktree-init.ts  git-worktree-list.ts  git-worktree-utils.ts  initialize.ts  test.ts
