[package]
name = "git-worktree-cli"
version = "0.1.0"
edition = "2021"
authors = ["Mikko Kohtala"]
description = "A tool for managing git worktrees efficiently"

[[bin]]
name = "gwt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
colored = "3.0"
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.20.0"
keyring = "3.5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1.0"

[build-dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"
